refactored external item for easier testing

--- a/tox.ini
+++ b/tox.ini
@@ -20,9 +20,9 @@ commands=
 [testenv:py27verbose]
 basepython=python2.7
 commands=
-    py.test --cov=. --cov-report term
+    py.test --cov=cursesmenu --cov-report term
 
 [testenv:py35verbose]
 basepython=python3.5
 commands=
-    py.test --cov=. --cov-report term
+    py.test --cov=cursesmenu --cov-report term
