Added stuff I don't use to tox.ini anyways

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,14 @@ setenv=
 commands=
     py.test
 
+[testenv:py33]
+commands=
+    py.test
+
+[testenv:py34]
+commands=
+    py.test
+
 [testenv:py35]
 commands=
     py.test
