--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,16 @@
 [tox]
-envlist = py35
+envlist =
+    py34
+    py35
+
 [testenv]
 deps=
     pytest
-    coverage
-    pytest-cov
 sitepackages=True
 setenv=
     PYTHONWARNINGS=all
 
 [testenv:py27]
-commands=
-    py.test
-
-[testenv:py33]
 commands=
     py.test
 
@@ -24,13 +21,3 @@ commands=
 [testenv:py35]
 commands=
     py.test
-
-[testenv:py27verbose]
-basepython=python2.7
-commands=
-    py.test --cov=cursesmenu --cov-report term
-
-[testenv:py35verbose]
-basepython=python3.5
-commands=
-    py.test --cov=cursesmenu --cov-report term
