--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,9 @@ language: python
 python:
   - "3.5"
 script:
-  - "python setup.py test"
+  - "python setup.py test --tox-args= '-e$TOX_ENV'"
+
+env:
+  - TOX_ENV=py27
+  - TOX_ENV=py34
+  - TOX_ENV=py35
