added docs to travis and tox

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     py27
     py34
     py35
+    docs
 
 [testenv]
 deps=
@@ -25,3 +26,10 @@ commands=
 [testenv:py35]
 commands=
     py.test
+
+[testenv:docs]
+basepython=python
+changedir=docs
+deps=sphinx
+commands=
+    sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
