make static directory if necessary in docs test

--- a/tox.ini
+++ b/tox.ini
@@ -32,4 +32,5 @@ basepython=python
 changedir=docs
 deps=sphinx
 commands=
+    python -c 'import os; [os.makedirs("_static") if not os.path.exists("_static") else None]'
     sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
