Test more versions for the heck of it.

--- a/tox.ini
+++ b/tox.ini
@@ -12,10 +12,25 @@ sitepackages=True
 setenv=
     PYTHONWARNINGS=all
 
+[testenv:py26]
+deps=
+    {[testenv]deps}
+    mock
+commands=
+    py.test
+
 [testenv:py27]
 deps=
     {[testenv]deps}
     mock
+commands=
+    py.test
+
+[testenv:py32]
+commands=
+    py.test
+
+[testenv:py33]
 commands=
     py.test
 
@@ -24,6 +39,18 @@ commands=
     py.test
 
 [testenv:py35]
+commands=
+    py.test
+
+[testenv:py36]
+commands=
+    py.test
+
+[testenv:pypy]
+commands=
+    py.test
+
+[testenv:pypy3]
 commands=
     py.test
 
