--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,13 @@ script:
   - 'python setup.py test --tox-args="-e$TOX_ENV"'
 
 env:
+  - TOX_ENV=py26
   - TOX_ENV=py27
+  - TOX_ENV=py32
+  - TOX_ENV=py33
   - TOX_ENV=py34
   - TOX_ENV=py35
+  - TOX_ENV=py36
+  - TOX_ENV=pypy
+  - TOX_ENV=pypy3
   - TOX_ENV=docs
