shuffled around travis stuff to hopefully make build work

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,9 @@ commands=
     py.test
 
 [testenv:py32]
+deps=
+    {[testenv]deps}
+    mock
 commands=
     py.test
 
@@ -47,10 +50,16 @@ commands=
     py.test
 
 [testenv:pypy]
+deps=
+    {[testenv]deps}
+    mock
 commands=
     py.test
 
 [testenv:pypy3]
+deps=
+    {[testenv]deps}
+    mock
 commands=
     py.test
 
