--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ matrix:
   allow_failures:
     - python: "nightly"
     - env: TOX_ENV=py26
+    - env: TOX_ENV=py32
     - env: TOX_ENV=py36
   fast_finish: true
 
