--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-alabaster
-Babel
-colorama
-docutils
-Jinja2
-MarkupSafe=
-pluggy
-py
-Pygments
-pytest
-pytz
-six
-snowballstemmer
-Sphinx
-sphinx-rtd-theme
-tox
-virtualenv
+alabaster==0.7.7
+Babel==2.2.0
+colorama==0.3.5
+docutils==0.12
+Jinja2==2.8
+MarkupSafe==0.23
+pluggy==0.3.1
+py==1.4.31
+Pygments==2.0.2
+pytest==2.8.5
+pytz==2015.7
+six==1.10.0
+snowballstemmer==1.2.1
+Sphinx==1.3.3
+sphinx-rtd-theme==0.1.9
+tox==2.3.1
+virtualenv==13.1.2
