discovered some cool new pytest plugins

--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,12 @@ envlist =
     py34
     py35
     docs
+    pep8
 
 [testenv]
 deps=
     pytest
+    pytest-timeout
 sitepackages=True
 setenv=
     PYTHONWARNINGS=all
@@ -18,7 +20,7 @@ deps=
     mock
     unittest2
 commands=
-    py.test
+    py.test --timeout=30
 
 [testenv:py27]
 deps=
@@ -29,33 +31,40 @@ commands=
 
 [testenv:py33]
 commands=
-    py.test
+    py.test --timeout=30
 
 [testenv:py34]
 commands=
-    py.test
+    py.test --timeout=30
 
 [testenv:py35]
 commands=
-    py.test
+    py.test --timeout=30
 
 [testenv:py36]
 commands=
-    py.test
+    py.test --timeout=30
 
 [testenv:pypy]
 deps=
     {[testenv]deps}
     mock
 commands=
-    py.test
+    py.test --timeout=30
 
 [testenv:pypy3]
 deps=
     {[testenv]deps}
     mock
 commands=
-    py.test
+    py.test --timeout=30
+
+[testenv:pep8]
+deps=
+    {[testenv]deps}
+    pytest-pep8
+commands=
+    py.test --timeout=30 --pep8
 
 [testenv:docs]
 basepython=python
