--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ env:
   - TOX_ENV=pypy
   - TOX_ENV=pypy3
   - TOX_ENV=docs
+  - TOX_ENV=pep8
 
 matrix:
   include:
@@ -31,6 +32,7 @@ matrix:
     - python: "nightly"
     - env: TOX_ENV=py26
     - env: TOX_ENV=py36
+    - env: TOX_ENV=pep8
   fast_finish: true
 
 
