--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,49 @@
-## The following requirements were added by pip freeze:
-alabaster==0.7.7
-Babel==2.2.0
+alabaster==0.7.10
+apipkg==1.4
+appdirs==1.4.4
+attrs==21.2.0
+Babel==2.4.0
+certifi==2017.4.17
+chardet==3.0.4
 colorama==0.3.6
-docutils==0.12
-Jinja2==2.11.3
-MarkupSafe==0.23
-pluggy==0.3.1
+coverage[toml]==5.5
+distlib==0.3.1
+
+docutils==0.13.1
+execnet==1.4.1
+filelock==3.0.12
+flake8==3.9.2
+idna==2.5
+imagesize==0.7.1
+iniconfig==1.1.1
+Jinja2==2.9.6
+MarkupSafe==1.0
+mccabe==0.6.1
+packaging==20.9
+pep8==1.7.0
+pexpect==4.8.0
+pluggy==0.13.1
+ptyprocess==0.7.0
 py==1.10.0
-Pygments==2.7.4
-pytest==2.8.7
-pytz==2015.7
-six==1.10.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
+Pygments==2.2.0
+pyparsing==2.4.7
+pyte==0.8.0
+pytest==6.2.4
+pytest-cache==1.0
+pytest-mock==1.6.0
+pytest-pep8==1.0.6
+pytz==2017.2
+requests==2.18.1
+six==1.16.0
 snowballstemmer==1.2.1
-Sphinx==1.3.5
-sphinx-rtd-theme==0.1.9
-tox==2.3.1
-virtualenv==14.0.6
+Sphinx==1.6.3
+sphinx-rtd-theme==0.2.4
+sphinxcontrib-websupport==1.0.1
+toml==0.10.2
+tox==3.23.1
+urllib3==1.21.1
+windows-curses==2.2.0;sys_platform=='win32'
+virtualenv==20.4.7
+wcwidth==0.2.5
