update tox envs

--- a/tox.ini
+++ b/tox.ini
@@ -1,75 +1,38 @@
 [tox]
-envlist =
-    py27
-    py34
-    py35
-    docs
-    pep8
+envlist = py37,py38,py39,py310,pypy,docs
 
 [testenv]
-deps=
+deps =
     pytest
-    pytest-timeout
-sitepackages=True
-setenv=
+    pexpect
+    pyte
+    windows-curses;sys_platform=='win32'
+commands =
+    pytest -vv
+setenv =
     PYTHONWARNINGS=all
+    TERM=xterm-256color
 
-[testenv:py26]
-deps=
-    {[testenv]deps}
-    mock
-    unittest2
+[testenv:type]
+deps =
+    mypy
 commands=
-    py.test --timeout=30
+    mypy --strict cursesmenu
 
-[testenv:py27]
-deps=
-    {[testenv]deps}
-    mock
-commands=
-    py.test
+[testenv:lint]
+deps =
+    flake8
+commands =
+    flake8 cursesmenu
+    flake8 test
 
-[testenv:py33]
-commands=
-    py.test --timeout=30
-
-[testenv:py34]
-commands=
-    py.test --timeout=30
-
-[testenv:py35]
-commands=
-    py.test --timeout=30
-
-[testenv:py36]
-commands=
-    py.test --timeout=30
-
-[testenv:pypy]
-deps=
-    {[testenv]deps}
-    mock
-commands=
-    py.test --timeout=30
-
-[testenv:pypy3]
-deps=
-    {[testenv]deps}
-    mock
-commands=
-    py.test --timeout=30
-
-[testenv:pep8]
-deps=
-    {[testenv]deps}
-    pytest-pep8
-commands=
-    py.test --timeout=30 --pep8
 
 [testenv:docs]
-basepython=python
+basepython=python3.6
 changedir=docs
-deps=sphinx
+deps=
+    sphinx
+    sphinx-rtd-theme
 commands=
     python -c 'import os; [os.makedirs("_static") if not os.path.exists("_static") else None]'
     sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
