Migrate to more modern packaging method

--- a/tox.ini
+++ b/tox.ini
@@ -28,11 +28,10 @@ commands =
 
 
 [testenv:docs]
-basepython=python3.6
-changedir=docs
-deps=
-    sphinx
-    sphinx-rtd-theme
-commands=
-    python -c 'import os; [os.makedirs("_static") if not os.path.exists("_static") else None]'
-    sphinx-build -W -b html -d {envtmpdir}/doctrees .  {envtmpdir}/html
+description = invoke sphinx-build to build the HTML docs
+basepython = python3.9
+deps = sphinx >= 4.0.2, < 5
+       sphinx-autodoc-typehints >= 1.12.0, < 2
+       sphinx-rtd-theme >= 0.5.2, < 1
+commands = sphinx-build -d "{toxworkdir}/docs_doctree" docs/source "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
+           python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
