--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,34 @@ requires = ["setuptools >= 40.6.0", "wheel", "setuptools_scm[toml]>=3.4"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
+
+
+[tool.black]
+line-length = 88
+target-version = ['py39']
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  | docs
+)/
+'''
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+
+[tool.coverage.report]
+exclude_lines = [
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+]
+include = ['test', 'cursesmenu', '*.py']
+
+[tool.coverage.run]
+source = ['test', 'cursesmenu']
+omit = [".idea"]
+branch = true
+
+
 [tool.pytest.ini_options]
 addopts = ["-Werror"]
