--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,7 +57,7 @@ repos:
     rev: 6.1.1
     hooks:
       - id: pydocstyle
-        exclude: .*|__init__.py|^(docs/|test/|setup.py|conftest.py|cursesmenu/items)
+        exclude: .*|__init__.py|^(docs/|test/|examples/|setup.py|conftest.py|cursesmenu/items)
         additional_dependencies:
           - toml
 
