--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include *.rst *.md *.txt tox.ini .travis.yml docs/Makefile .ackrc
+include *.rst *.md *.txt tox.ini docs/Makefile .ackrc
 recursive-include test *.py
 recursive-include docs *.rst
 recursive-include docs *.py
