--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,16 +17,16 @@ repos:
       - id: end-of-file-fixer
       - id: mixed-line-ending
       - id: trailing-whitespace
-
+      - id: check-merge-conflict
   - repo: https://github.com/psf/black
-    rev: 21.5b1
+    rev: 21.11b1
     hooks:
       - id: black
         exclude: ^docs/source/conf.py
         language_version: python3
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.812
+    rev: v0.910-1
     hooks:
       - id: mypy
         exclude: ^docs
@@ -35,7 +35,7 @@ repos:
         args: [--strict]
 
   - repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.8.0
+    rev: v1.9.0
     hooks:
       - id: python-check-blanket-noqa
       - id: python-check-mock-methods
@@ -46,13 +46,13 @@ repos:
       - id: rst-inline-touching-normal
 
   - repo: https://github.com/pycqa/isort
-    rev: 5.8.0
+    rev: 5.10.1
     hooks:
       - id: isort
         name: isort (python)
 
   - repo: https://github.com/PyCQA/flake8
-    rev: 3.9.2
+    rev: 4.0.1
     hooks:
       - id: flake8
 
@@ -65,18 +65,18 @@ repos:
           - toml
 
   - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v1.17.0
+    rev: v1.20.0
     hooks:
       - id: setup-cfg-fmt
         args: [--min-py3-version=3.5]
 
   - repo: https://github.com/asottile/add-trailing-comma
-    rev: v2.1.0
+    rev: v2.2.1
     hooks:
       - id: add-trailing-comma
 
   - repo: https://github.com/asottile/blacken-docs
-    rev: v1.10.0
+    rev: v1.12.0
     hooks:
     -   id: blacken-docs
         additional_dependencies: [black==21.5b1]
