--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
     Programming Language :: Python,
@@ -33,9 +34,11 @@ python_requires = >=3.6
 
 [options.extras_require]
 all =
+    deprecated
     pexpect
     pyte
     pytest
+    types-Deprecated
 test =
     pexpect
     pyte
