--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,17 @@
 [tox]
-envlist = py37,py38,py39,py310,pypy,type,lint,docs
+envlist = clean,py37,py38,py39,py310,pypy,type,lint,docs
 
 [testenv]
 deps =
+    deprecated
+    coverage[toml]
     pytest
+    pytest-cov
     pexpect
     pyte
     windows-curses;sys_platform=='win32'
 commands =
-    pytest -vv
+    pytest -vv --cov --cov-append --cov-report=term-missing --cov-fail-under=100 --no-cov-on-fail
 setenv =
     PYTHONWARNINGS=all
     TERM=xterm-256color
@@ -16,6 +19,7 @@ setenv =
 [testenv:type]
 deps =
     mypy
+    types-Deprecated
 commands =
     mypy --strict cursesmenu
 
@@ -32,5 +36,11 @@ basepython = python3.9
 deps = sphinx >= 4.0.2, < 5
        sphinx-autodoc-typehints >= 1.12.0, < 2
        sphinx-rtd-theme >= 0.5.2, < 1
+       deprecated
 commands = sphinx-build -d "{toxworkdir}/docs_doctree" docs/source "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
+
+[testenv:clean]
+deps = coverage[toml]
+skip_install = true
+commands = coverage erase
