--- a/requirements.txt
+++ b/requirements.txt
@@ -2,37 +2,41 @@ alabaster==0.7.12
 appdirs==1.4.4
 attrs==21.2.0
 Babel==2.9.1
-certifi==2020.12.5
+certifi==2021.10.8
 chardet==4.0.0
-coverage[toml]==5.5
-distlib==0.3.1
-docutils==0.16
-filelock==3.0.12
-flake8==3.9.2
-idna==2.10
-imagesize==1.2.0
+charset-normalizer==2.0.8
+coverage[toml]==6.1.2
+Deprecated==1.2.13
+distlib==0.3.3
+docutils==0.18.1
+filelock==3.4.0
+flake8==4.0.1
+idna==3.3
+imagesize==1.3.0
 iniconfig==1.1.1
-Jinja2==3.0.1
+Jinja2==3.0.3
 MarkupSafe==2.0.1
 mccabe==0.6.1
-packaging==20.9
+packaging==21.3
 pexpect==4.8.0
-pluggy==0.13.1
+platformdirs==2.4.0
+pluggy==1.0.0
 ptyprocess==0.7.0
-py==1.10.0
-pycodestyle==2.7.0
-pyflakes==2.3.1
-Pygments==2.9.0
-pyparsing==2.4.7
+py==1.11.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+Pygments==2.10.0
+pyparsing==3.0.6
 pyte==0.8.0
-pytest==6.2.4
-pytz==2021.1
-requests==2.25.1
+pytest==6.2.5
+pytest-cov==3.0.0
+pytz==2021.3
+requests==2.26.0
 six==1.16.0
-snowballstemmer==2.1.0
-Sphinx==4.0.2
+snowballstemmer==2.2.0
+Sphinx==4.3.0
 sphinx-autodoc-typehints==1.12.0
-sphinx-rtd-theme==0.5.2
+sphinx-rtd-theme==1.0.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
@@ -40,8 +44,10 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 toml==0.10.2
-tox==3.23.1
-urllib3==1.26.5
-virtualenv==20.4.7
+tox==3.24.4
+types-Deprecated==1.2.3
+urllib3==1.26.7
+virtualenv==20.10.0
 wcwidth==0.2.5
 windows-curses==2.2.0;sys_platform=='win32'
+wrapt==1.13.3
