--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = curses_menu
+version = attr: cursesmenu.__version__
 description = A simple console menu system using curses
 long_description = file: README.rst
 long_description_content_type = text/x-rst
