--- a/.github/workflows/github-action-tox.yml
+++ b/.github/workflows/github-action-tox.yml
@@ -11,7 +11,7 @@ jobs:
         #os: [macos-latest, ubuntu-latest, windows-latest]
         os: [ubuntu-latest]
         #python-version: [3.6, 3.7, 3.8, 3.9, pypy3]
-        python-version: [3.7, 3.8, 3.9, 3.10]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
         exclude:
           - os: windows-latest
             python-version: pypy3
