--- a/.github/workflows/github-action-tox.yml
+++ b/.github/workflows/github-action-tox.yml
@@ -8,8 +8,8 @@ jobs:
 
     strategy:
       matrix:
-        #os: [macos-latest, ubuntu-latest, windows-latest]
-        os: [ubuntu-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
+        #os: [ubuntu-latest]
         #python-version: [3.6, 3.7, 3.8, 3.9, pypy3]
         python-version: ["3.7", "3.8", "3.9", "3.10"]
         exclude:
