--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.3.0
     hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -19,14 +19,14 @@ repos:
       - id: trailing-whitespace
       - id: check-merge-conflict
   - repo: https://github.com/psf/black
-    rev: 21.11b1
+    rev: 22.6.0
     hooks:
       - id: black
         exclude: ^docs/source/conf.py
         language_version: python3
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.910-1
+    rev: v0.971
     hooks:
       - id: mypy
         exclude: ^docs
@@ -68,18 +68,18 @@ repos:
           - pydocstyle[toml]
 
   - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v1.20.0
+    rev: v1.20.2
     hooks:
       - id: setup-cfg-fmt
         args: [--min-py3-version=3.5]
 
   - repo: https://github.com/asottile/add-trailing-comma
-    rev: v2.2.1
+    rev: v2.2.3
     hooks:
       - id: add-trailing-comma
 
   - repo: https://github.com/asottile/blacken-docs
-    rev: v1.12.0
+    rev: v1.12.1
     hooks:
     -   id: blacken-docs
         additional_dependencies: [black==21.5b1]
