Set up tox and coverage for platform specific coverage

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = clean,py37,py38,py39,py310,pypy,type,lint,docs
+envlist = clean,py{37,38,39,310}-{linux,macos,windows},pypy,type,lint,docs
 
 [testenv]
 deps =
@@ -12,9 +12,24 @@ deps =
     windows-curses;sys_platform=='win32'
 commands =
     pytest -vv --cov --cov-append --cov-report=term-missing --cov-fail-under=95 --no-cov-on-fail
+platform =  linux: linux
+            macos: darwin
+            windows: win32
 setenv =
     PYTHONWARNINGS=all
     TERM=xterm-256color
+    linux: PLATFORM = linux
+    macos: PLATFORM = macos
+    windows: PLATFORM = windows
+
+
+
+[testenv:py{37,38,39,310}-{linux,macos,windows}]
+setenv =
+    COVERAGE_RCFILE = {envtmpdir}/coveragerc
+    {[testenv]setenv}
+commands_pre =
+    {envpython} -c 'from pathlib import Path; Path(r"{env:COVERAGE_RCFILE}").write_text(Path(".coveragerc.in").read_text().format(platform="{env:PLATFORM}"))'
 
 [testenv:type]
 deps =
