Continue to work on cross-platform coverage

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ setenv =
     COVERAGE_RCFILE = {envtmpdir}/coveragerc
     {[testenv]setenv}
 commands_pre =
-    {envpython} -c 'from pathlib import Path; Path(r"{env:COVERAGE_RCFILE}").write_text(Path(".coveragerc.in").read_text().format(platform="{env:PLATFORM}"))'
+    {envpython} ./scripts/make_coverage_rc.py
 
 [testenv:type]
 deps =
