This should get windows coverage to 100%

--- a/.coveragerc.in
+++ b/.coveragerc.in
@@ -6,6 +6,9 @@ exclude_lines =
     pragma: no cover
     if sys.version_info >= \\(3, [5-9]\\):
     @overload
+omit =
+    cursesmenu/old_curses_menu.py
+    {extra_omit}
 
 [coverage:run]
 branch = true
