Doing some extra work, but it should make coverage work

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
-envlist = clean,py{37,38,39,310}-{linux,macos,windows},pypy,type,lint,docs
 
+envlist = clean,py{37,38,39,310}-{linux,macos,windows},py,pypy,type,lint,docs
 [testenv]
 deps =
     deprecated
@@ -18,16 +18,8 @@ platform =  linux: linux
 setenv =
     PYTHONWARNINGS=all
     TERM=xterm-256color
-    linux: PLATFORM = linux
-    macos: PLATFORM = macos
-    windows: PLATFORM = windows
-
-
-
-[testenv:py{37,38,39,310}-{linux,macos,windows}]
-setenv =
     COVERAGE_RCFILE = {envtmpdir}/coveragerc
-    {[testenv]setenv}
+
 commands_pre =
     {envpython} ./scripts/make_coverage_rc.py
 
