Moved command item args into helper function

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 
-envlist = clean,py{37,38,39,310}-{linux,macos,windows},py,pypy,type,lint,docs
+envlist = clean,py{37,38,39,310}-{linux,macos,windows},py,pypy3,type,lint,docs
 [testenv]
 deps =
     deprecated
