Fix platform specific coverage issue

--- a/.coveragerc.in
+++ b/.coveragerc.in
@@ -6,6 +6,7 @@ exclude_lines =
     pragma: no cover
     if sys.version_info >= \\(3, [5-9]\\):
     @overload
+    {extra_exclude}
 omit =
     cursesmenu/old_curses_menu.py
     {extra_omit}
