--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -71,7 +71,7 @@ repos:
     rev: v2.0.0
     hooks:
       - id: setup-cfg-fmt
-        args: [--min-py3-version=3.5]
+        args: [--include-version-classifiers]
 
   - repo: https://github.com/asottile/add-trailing-comma
     rev: v2.2.3
