--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
     pyte
     windows-curses;sys_platform=='win32'
 commands =
-    pytest -vv --cov --cov-append --cov-report=term-missing --cov-fail-under=100 --no-cov-on-fail
+    pytest -vv --cov --cov-append --cov-report=xml --cov-fail-under=100 --no-cov-on-fail
 platform =  linux: linux
             macos: darwin
             windows: win32
