--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ deps =
     windows-curses;sys_platform=='win32'
 commands =
     pytest -vv --cov --cov-append --cov-report=term-missing --cov-report=xml --cov-fail-under=100 --no-cov-on-fail
+    coverage lcov
 platform =  linux: linux
             macos: darwin
             windows: win32
