--- a/.github/workflows/github-action-tox.yml
+++ b/.github/workflows/github-action-tox.yml
@@ -22,8 +22,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Tox and any other packages
-        run: pip install tox
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
       - name: Run Tox
         # Run tox using the version of Python in `PATH`
         run: tox -e py
