--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ isolated_build = True
 basepython = python3
 
 [testenv]
+whitelist_externals = poetry
 deps =
     deprecated
     coverage[toml]
@@ -18,7 +19,8 @@ deps =
     pyte
     windows-curses;sys_platform=='win32'
 commands =
-    pytest -vv --cov --cov-append --cov-report=term-missing --cov-report=xml --cov-fail-under=100 --no-cov-on-fail
+    poetry install -v
+    poetry run pytest -vv --cov --cov-append --cov-report=term-missing --cov-report=xml --cov-fail-under=100 --no-cov-on-fail
     coverage lcov
 platform = linux: linux
            macos: darwin
