--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ exclude = ["docs/_build"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-windows-curses = { version = "2.3.0", platform = "windows" }
+windows-curses = { version = "2.3.0", platform = "win32" }
 importlib-metadata = { version = ">=1.7.0", python = "<3.8" }
 
 [tool.poetry.dev-dependencies]
