Cache poetry dependencies

--- a/.github/workflows/github-action-tox.yml
+++ b/.github/workflows/github-action-tox.yml
@@ -17,11 +17,12 @@ jobs:
             python-version: pypy3
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: "poetry"
       - name: Install Poetry
         uses: snok/install-poetry@v1
       - name: Install Tox and any other packages
