--- a/.github/workflows/github-action-tox.yml
+++ b/.github/workflows/github-action-tox.yml
@@ -20,6 +20,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Poetry
         uses: snok/install-poetry@v1
+        with:
+          virtualenvs-path: "{cache-dir}/pypoetry/virtualenvs"
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
