--- a/.github/workflows/github-action-tox.yml
+++ b/.github/workflows/github-action-tox.yml
@@ -20,13 +20,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Poetry
         uses: snok/install-poetry@v1
-        with:
-          virtualenvs-path: "{cache-dir}/pypoetry/virtualenvs"
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: "poetry"
+          cache: 'pip'
+          cache-dependency-path: 'poetry.lock'
       - name: Install Tox and any other packages
         run: pip install tox
       - name: Run Tox
