--- a/.github/workflows/github-action-tox.yml
+++ b/.github/workflows/github-action-tox.yml
@@ -8,13 +8,14 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [ "3.10", "3.9","3.8", "3.7" ]
+        python-version: [ "3.10", "3.9","3.8", "3.7","3.11.0-rc.1" ]
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         #os: [ubuntu-latest]
         #python-version: [3.6, 3.7, 3.8, 3.9, pypy3]
         exclude:
           - os: windows-latest
             python-version: pypy3
+    continue-on-error: ${{ matrix.python-version == '3.11.0-rc.1' }}
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
