--- a/.github/workflows/github-action-tox.yml
+++ b/.github/workflows/github-action-tox.yml
@@ -8,14 +8,12 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [ "3.10", "3.9","3.8", "3.7","3.11.0-rc.1" ]
+        python-version: [ "3.10", "3.9","3.8", "3.7", "3.11.0-rc.1", "pypy3.9" ]
         os: [ ubuntu-latest, macos-latest, windows-latest ]
-        #os: [ubuntu-latest]
-        #python-version: [3.6, 3.7, 3.8, 3.9, pypy3]
         exclude:
           - os: windows-latest
             python-version: pypy3
-    continue-on-error: ${{ matrix.python-version == '3.11.0-rc.1' }}
+    continue-on-error: ${{ matrix.python-version == '3.11.0-rc.1' || matrix.python-version == 'pypy3.9' }}
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -42,9 +40,9 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-    - name: Coveralls Finished
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.github_token }}
-        path-to-lcov: coverage.lcov
-        parallel-finished: true
+      - name: Coveralls Finished
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.github_token }}
+          path-to-lcov: coverage.lcov
+          parallel-finished: true
