--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,5 @@
+default_language_version:
+  python: python3.10
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
@@ -22,19 +24,12 @@ repos:
     rev: 22.6.0
     hooks:
       - id: black
-        exclude: ^docs/source/conf.py
-        language_version: python3
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.971
     hooks:
       - id: mypy
-        exclude: ^docs
-        additional_dependencies: [types-Deprecated]
-      - id: mypy
-        exclude: ^(docs/|test/|examples/|setup.py)
-        args: [--strict]
-        additional_dependencies: [types-Deprecated]
+        additional_dependencies: [ types-Deprecated ]
 
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.9.0
@@ -51,7 +46,6 @@ repos:
     rev: 5.10.1
     hooks:
       - id: isort
-        name: isort (python)
 
   - repo: https://github.com/PyCQA/flake8
     rev: 5.0.1
@@ -62,16 +56,9 @@ repos:
     rev: 6.1.1
     hooks:
       - id: pydocstyle
-        exclude: __init__.py|^(docs/|test/|examples/|setup.py|conftest.py)
         additional_dependencies:
           - toml
           - pydocstyle[toml]
-
-  - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v2.0.0
-    hooks:
-      - id: setup-cfg-fmt
-        args: [--include-version-classifiers]
 
   - repo: https://github.com/asottile/add-trailing-comma
     rev: v2.2.3
@@ -81,5 +68,5 @@ repos:
   - repo: https://github.com/asottile/blacken-docs
     rev: v1.12.1
     hooks:
-    -   id: blacken-docs
-        additional_dependencies: [black==21.5b1]
+      - id: blacken-docs
+        additional_dependencies: [ black==22.6.0 ]
