--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,45 +1,6 @@
-#[build-system]
-#requires = ["setuptools >= 40.6.0", "wheel", "setuptools_scm[toml]>=3.4"]
-#build-backend = "setuptools.build_meta"
-
-#[tool.setuptools_scm]
-
-
-[tool.black]
-line-length = 88
-target-version = ['py39']
-include = '\.pyi?$'
-extend-exclude = '''
-/(
-  | docs
-)/
-'''
-
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-
-[tool.coverage.report]
-exclude_lines = [
-    "if __name__ == .__main__.:",
-    "if TYPE_CHECKING:",
-    "pragma: no cover all",
-    "if sys.version_info >= \\(3, [5-9]\\):",
-    "@overload",
-]
-
-
-[tool.coverage.run]
-source = ['test', 'cursesmenu']
-omit = ["cursesmenu/old_curses_menu.py"]
-branch = true
-
-
-[tool.pytest.ini_options]
-addopts = ["-Werror"]
-
-[tool.pydocstyle]
-add_ignore = "D105"
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "curses-menu"
@@ -70,6 +31,61 @@ classifiers = [
 include = ["*.rst", "*.md", "*.txt", "tox.ini", "docs/Makefile", "test/**/*.py", "docs/**/*.rst", "docs/**/*.py"]
 exclude = ["docs/_build"]
 
+[tool.black]
+line-length = 88
+target-version = ['py310']
+include = '\.pyi?$'
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+
+[tool.coverage.report]
+exclude_lines = [
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "pragma: no cover all",
+    "if sys.version_info >= \\(3, [5-9]\\):",
+    "@overload",
+]
+
+
+[tool.coverage.run]
+source = ['test', 'cursesmenu']
+omit = ["cursesmenu/old_curses_menu.py"]
+branch = true
+
+
+[tool.pytest.ini_options]
+addopts = ["-Werror"]
+
+[tool.pydocstyle]
+add_ignore = "D105"
+match = "(?!__init__.py|^(docs/|test/|examples/|setup.py|conftest.py))"
+
+[tool.mypy]
+mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
+exclude = "^(scratch/|examples/)"
+warn_unused_configs = true
+warn_redundant_casts = true
+
+[[tool.mypy.overrides]]
+module = "cursesmenu"
+disallow_any_generics = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_unused_ignores = true
+warn_return_any = true
+no_implicit_reexport = true
+strict_equality = true
+strict_concatenate = true
+
+
 [tool.poetry.dependencies]
 python = "^3.7"
 windows-curses = { version = "2.3.0", platform = "win32" }
@@ -87,7 +103,4 @@ pexpect = "^4.8.0"
 Deprecated = "^1.2.13"
 types-Deprecated = "^1.2.9"
 pytest-cov = "^3.0.0"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+mypy = "^0.971"
