Update mypy command in tox ini

--- a/tox.ini
+++ b/tox.ini
@@ -37,8 +37,9 @@ commands_pre =
 deps =
     mypy
     types-Deprecated
+    pytest
 commands =
-    mypy --strict cursesmenu
+    mypy .
 
 basepython = python3.10
 [testenv:lint]
