--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
     windows-curses;sys_platform=='win32'
 commands =
     poetry install -v
-    poetry run pytest -vv --cov --cov-append --cov-report=term-missing --cov-report=xml --cov-fail-under=100 --no-cov-on-fail
+    poetry run pytest
     coverage lcov
 platform = linux: linux
            macos: darwin
