--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ whitelist_externals = poetry
 deps =
     deprecated
     coverage[toml]
+    coverage-conditional-plugin
     pytest
     pytest-cov
     pexpect
@@ -28,10 +29,6 @@ platform = linux: linux
 setenv =
     PYTHONWARNINGS=all
     TERM=xterm-256color
-    COVERAGE_RCFILE = {envtmpdir}/coveragerc
-
-commands_pre =
-    {envpython} ./scripts/make_coverage_rc.py
 
 [testenv:type]
 deps =
@@ -62,6 +59,7 @@ commands = sphinx-build -d "{toxworkdir}/docs_doctree" docs/source "{toxworkdir}
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
 
 [testenv:clean]
-deps = coverage[toml]
+deps =  coverage[toml]
+        coverage-conditional-plugin
 skip_install = true
 commands = coverage erase
