Pin versions in tox.ini
There's a plugin for this, but it has dependency conflicts due to importlib_metadata

--- a/tox.ini
+++ b/tox.ini
@@ -11,14 +11,14 @@ basepython = python3
 [testenv]
 whitelist_externals = poetry
 deps =
-    deprecated
-    coverage[toml]
-    coverage-conditional-plugin
-    pytest
-    pytest-cov
-    pexpect
-    pyte
-    windows-curses;sys_platform=='win32'
+    deprecated >= 1.2.13, < 2
+    coverage[toml] >= 6.4.2, < 7
+    coverage-conditional-plugin >= 0.5.0, < 1
+    pytest >= 7.1.2, < 8
+    pytest-cov >= 3.0.0, < 4
+    pexpect >= 4.8.0, < 5
+    pyte >= 0.8.1, < 1
+    windows-curses == 2.3.0;sys_platform=='win32'
 commands =
     poetry install -v
     poetry run pytest
@@ -32,16 +32,16 @@ setenv =
 
 [testenv:type]
 deps =
-    mypy
-    types-Deprecated
-    pytest
+    mypy >= 0.971, < 1
+    types-Deprecated >= 1.2.9, < 2
+    pytest  >= 7.1.2, < 8
 commands =
     mypy .
 
 basepython = python3.10
 [testenv:lint]
 deps =
-    flake8
+    flake8 >= 5.0.4, < 6
 commands =
     flake8 cursesmenu
     flake8 test
@@ -54,12 +54,12 @@ basepython = python3.10
 deps = sphinx >= 5.1.1, < 6
        sphinx-autodoc-typehints >= 1.19.0, < 2
        sphinx-rtd-theme >= 1.0.0, < 2
-       deprecated
+       deprecated >= 1.2.13, < 2
 commands = sphinx-build -d "{toxworkdir}/docs_doctree" docs/source "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
            python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
 
 [testenv:clean]
-deps =  coverage[toml]
-        coverage-conditional-plugin
+deps = coverage[toml] >= 6.4.2, < 7
+       coverage-conditional-plugin >= 0.5.0, < 1
 skip_install = true
 commands = coverage erase
