--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = clean,py{37,38,39,310}-{linux,macos,windows},py,pypy3,type,lint,docs
+envlist = clean,py{37,38,39,310},py,pypy3,type,lint,docs
 isolated_build = True
 
 [tox:.package]
@@ -9,7 +9,6 @@ isolated_build = True
 basepython = python3
 
 [testenv]
-whitelist_externals = poetry
 deps =
     deprecated >= 1.2.13, < 2
     coverage[toml] >= 6.4.2, < 7
@@ -20,12 +19,8 @@ deps =
     pyte >= 0.8.1, < 1
     windows-curses == 2.3.0;sys_platform=='win32'
 commands =
-    poetry install -v
-    poetry run pytest
+    pytest
     coverage lcov
-platform = linux: linux
-           macos: darwin
-           windows: win32
 setenv =
     PYTHONWARNINGS=all
     TERM=xterm-256color
