--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -7,11 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Lint
     steps:
-      - name: Check out source repository
-        uses: actions/checkout@v3
-      - name: Set up Python environment
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - name: flake8 Lint
-        uses: py-actions/flake8@v2
+      - uses: py-actions/flake8@v2
