--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
       - uses: jpetrucciani/mypy-check@master
         with:
-          path: 'cursesmenu'
+          path: '.'
           mypy_flags: '--config-file pyproject.toml'
