--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -6,6 +6,7 @@ jobs:
   mypy:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: jpetrucciani/mypy-check@master
         with:
           path: '.'
