--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -7,6 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+          cache: 'pip'
+      - run: pip install "types-Deprecated >= 1.2.9, < 2"
+      - run: pip install "pytest  >= 7.1.2, < 8"
       - uses: jpetrucciani/mypy-check@master
         with:
           path: '.'
