--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -7,12 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: snok/install-poetry@v1
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install "types-Deprecated >= 1.2.9, < 2"
-      - run: pip install "pytest  >= 7.1.2, < 8"
-      - uses: jpetrucciani/mypy-check@master
-        with:
-          path: '.'
-          mypy_flags: '--config-file pyproject.toml'
+          cache: 'poetry'
+      - run: poetry install
+      - run: poetry run mypy .
