--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,16 +107,28 @@ windows-curses = { version = "2.3.0", platform = "win32" }
 importlib-metadata = { version = ">=1.7.0", python = "<3.8" }
 Deprecated = "^1.2.13"
 
-[tool.poetry.dev-dependencies]
-pytest = "^7.1.2"
-tox = "^3.25.1"
+[tool.poetry.group.docs]
+
+[tool.poetry.group.docs.dependencies]
 Sphinx = "^5.1.1"
 sphinx-rtd-theme = "^1.0.0"
 sphinx-autodoc-typehints = "^1.19.1"
+
+[tool.poetry.group.test]
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.1.2"
+tox = "^3.25.1"
 coverage = { version = "^6.4.2", extras = ["toml"] }
 pyte = "^0.8.1"
 pexpect = "^4.8.0"
 types-Deprecated = "^1.2.9"
 pytest-cov = "^3.0.0"
-mypy = "^0.971"
 coverage-conditional-plugin = "^0.5.0"
+
+[tool.poetry.group.type]
+
+[tool.poetry.group.type.dependencies]
+types-Deprecated = "^1.2.9"
+mypy = "^0.971"
+pytest = "^7.1.2"
