Ignore several more ruff things
Make some arguments positional-only

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,13 @@ profile = "black"
 multi_line_output = 3
 
 [tool.ruff]
+select = ["E", "F", "I", "N", "S", "C", "FBT"]
+#Unused  "FBT", "B", "A", "T", "Q", "ANN", "YTT","RUF","M"
+#unused: D,U BLE C
 extend-exclude=["examples/*"]
+extend-ignore = [ "S101" ]
+
+
 
 [tool.coverage.report]
 exclude_lines = [
