--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,10 +44,10 @@ profile = "black"
 multi_line_output = 3
 
 [tool.ruff]
-select = ["E", "F", "I", "N", "S", "C", "FBT", "B", "A", "T", "Q", "YTT", "RUF", "M", "ANN", "U"]
+select = ["E", "F", "I", "N", "S", "C", "FBT", "B", "A", "T", "Q", "YTT", "RUF", "ANN", "UP"]
 #unused: D (pydocstyle), BLE (blind except), C(mccabe)
 extend-exclude=["examples/*"]
-extend-ignore = [ "S101", "ANN101", "ANN102", "U015"]
+extend-ignore = [ "S101", "ANN101", "ANN102", "UP015"]
 # S101 (assert used): ignored because we use assert for type narrowing and tests
 # ANN101 (no self annotation): ignored because self annotations feel redundant
 # ANN102 (no cls annotation): ignored because cls annotations also feel redundant
