--- a/docs/requirements-docs.txt
+++ b/docs/requirements-docs.txt
@@ -1,17 +1,19 @@
 alabaster==0.7.12 ; python_version >= "3.7" and python_version < "4.0"
 attrs==22.2.0 ; python_version >= "3.7" and python_version < "4.0"
 babel==2.11.0 ; python_version >= "3.7" and python_version < "4.0"
+cachetools==5.2.0 ; python_version >= "3.7" and python_version < "4.0"
 certifi==2022.12.7 ; python_version >= "3.7" and python_version < "4"
+chardet==5.1.0 ; python_version >= "3.7" and python_version < "4.0"
 charset-normalizer==2.1.1 ; python_version >= "3.7" and python_version < "4"
-colorama==0.4.6 ; python_version >= "3.7" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.7" and python_version < "4.0" and platform_system == "Windows"
-coverage-conditional-plugin==0.5.0 ; python_version >= "3.7" and python_version < "4.0"
-coverage==6.5.0 ; python_version >= "3.7" and python_version < "4.0"
-coverage[toml]==6.5.0 ; python_version >= "3.7" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.7" and python_version < "4.0"
+coverage-conditional-plugin==0.8.0 ; python_version >= "3.7" and python_version < "4.0"
+coverage==7.0.1 ; python_version >= "3.7" and python_version < "4.0"
+coverage[toml]==7.0.1 ; python_version >= "3.7" and python_version < "4.0"
 deprecated==1.2.13 ; python_version >= "3.7" and python_version < "4.0"
 distlib==0.3.6 ; python_version >= "3.7" and python_version < "4.0"
 docutils==0.17.1 ; python_version >= "3.7" and python_version < "4.0"
 exceptiongroup==1.1.0 ; python_version >= "3.7" and python_version < "3.11"
-filelock==3.8.2 ; python_version >= "3.7" and python_version < "4.0"
+filelock==3.9.0 ; python_version >= "3.7" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.7" and python_version < "4"
 imagesize==1.4.1 ; python_version >= "3.7" and python_version < "4.0"
 importlib-metadata==5.2.0 ; python_version >= "3.7" and python_version < "3.10"
@@ -20,17 +22,16 @@ jinja2==3.1.2 ; python_version >= "3.7" and python_version < "4.0"
 markupsafe==2.1.1 ; python_version >= "3.7" and python_version < "4.0"
 packaging==22.0 ; python_version >= "3.7" and python_version < "4.0"
 pexpect==4.8.0 ; python_version >= "3.7" and python_version < "4.0"
-platformdirs==2.6.0 ; python_version >= "3.7" and python_version < "4.0"
+platformdirs==2.6.2 ; python_version >= "3.7" and python_version < "4.0"
 pluggy==1.0.0 ; python_version >= "3.7" and python_version < "4.0"
 ptyprocess==0.7.0 ; python_version >= "3.7" and python_version < "4.0"
-py==1.11.0 ; python_version >= "3.7" and python_version < "4.0"
 pygments==2.13.0 ; python_version >= "3.7" and python_version < "4.0"
+pyproject-api==1.2.1 ; python_version >= "3.7" and python_version < "4.0"
 pyte==0.8.1 ; python_version >= "3.7" and python_version < "4.0"
 pytest-cov==4.0.0 ; python_version >= "3.7" and python_version < "4.0"
 pytest==7.2.0 ; python_version >= "3.7" and python_version < "4.0"
 pytz==2022.7 ; python_version >= "3.7" and python_version < "4.0"
 requests==2.28.1 ; python_version >= "3.7" and python_version < "4"
-six==1.16.0 ; python_version >= "3.7" and python_version < "4.0"
 snowballstemmer==2.2.0 ; python_version >= "3.7" and python_version < "4.0"
 sphinx-autodoc-typehints==1.19.5 ; python_version >= "3.7" and python_version < "4.0"
 sphinx-rtd-theme==1.1.1 ; python_version >= "3.7" and python_version < "4.0"
@@ -42,7 +43,7 @@ sphinxcontrib-jsmath==1.0.1 ; python_version >= "3.7" and python_version < "4.0"
 sphinxcontrib-qthelp==1.0.3 ; python_version >= "3.7" and python_version < "4.0"
 sphinxcontrib-serializinghtml==1.1.5 ; python_version >= "3.7" and python_version < "4.0"
 tomli==2.0.1 ; python_version >= "3.7" and python_full_version <= "3.11.0a6"
-tox==3.28.0 ; python_version >= "3.7" and python_version < "4.0"
+tox==4.0.19 ; python_version >= "3.7" and python_version < "4.0"
 types-deprecated==1.2.9 ; python_version >= "3.7" and python_version < "4.0"
 typing-extensions==4.4.0 ; python_version >= "3.7" and python_version < "3.8"
 urllib3==1.26.13 ; python_version >= "3.7" and python_version < "4"
