Add status check for tests on all matrix versions
Fail a test to make sure status check works

Revert "Fail a test to make sure status check works"

This reverts commit 92cccda1b67d255fd981b873544bed0be7e92590.

--- a/.github/workflows/tests-coverage.yml
+++ b/.github/workflows/tests-coverage.yml
@@ -46,3 +46,17 @@ jobs:
           github-token: ${{ secrets.github_token }}
           path-to-lcov: .cov/coverage.lcov
           parallel-finished: true
+
+  results:
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    name: Final Test Results
+    needs: [ test ]
+    steps:
+      - run: |
+          result="${{ needs.test.result }}"
+          if [[ $result == "success" || $result == "skipped" ]]; then
+            exit 0
+          else
+            exit 1
+          fi
