--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 
 jobs:
   lint:
+    name: Check format with black
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
