--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   flake8-lint:
     runs-on: ubuntu-latest
-    name: Lint
+    name: Lint with flake8
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
