--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -96,6 +96,7 @@ jobs:
   build-and-publish:
     name: Build and publish Python distributions to PyPI and TestPyPI
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags')
     needs:
       - black-format
       - flake8-lint
@@ -106,12 +107,11 @@ jobs:
       - uses: snok/install-poetry@v1
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: "3.10"
           cache: 'poetry'
       - run: poetry --version
       - run: poetry install
       - name: Build and publish to pypi
-        if: startsWith(github.ref, 'refs/tags')
         uses: JRubics/poetry-publish@v1.15
         with:
           pypi_token: ${{ secrets.PYPI_TOKEN }}
