--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,15 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
       - id: check-merge-conflict
+
+
+
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.3.1
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
+
   - repo: https://github.com/psf/black
     rev: 22.12.0
     hooks:
