--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -73,6 +73,7 @@ repos:
     rev: v0.0.203
     hooks:
       - id: ruff
+        args: ["--force-exclude"]
 
   - repo: https://github.com/PyCQA/pydocstyle
     rev: 6.1.1
